# rust-htmx

./: .gitignore  Cargo.toml  tailwind.config.cjs
migrations/: 20231223204336_users.up.sql  20231223204745_posts.up.sql  20231223205319_comments.up.sql  20231223211414_add_user_id_to_comments.down.sql  20231223211414_add_user_id_to_comments.up.sql  20231224024631_likes.down.sql  20231224024631_likes.up.sql
src/: main.rs
src/models/: comments.rs  posts.rs  users.rs
src/posts/: mod.rs  post.rs
templates/: base.html  index.html  post.html  posts.html
templates/components/: comment.html  comments.html  post.html  replies.html  reply.html
